# pinocchio

./: .gitignore  Cargo.toml  README.md  justfile  package.json  parts_dump_asm.txt  pnpm-lock.yaml
cu_bench/: Cargo.toml  Makefile
cu_bench/small-oracle/: Cargo.toml
cu_bench/small-oracle/shared-bench/: Cargo.toml
cu_bench/small-oracle/shared-bench/src/: lib.rs
cu_bench/small-oracle/shared-types/: Cargo.toml
cu_bench/small-oracle/shared-types/src/: lib.rs
cu_bench/small-oracle/small-oracle-manual/: Cargo.toml
cu_bench/small-oracle/small-oracle-manual/src/: lib.rs
cu_bench/small-oracle/small-oracle-manual/tests/: cu_benchmark.rs
cu_bench/small-oracle/small-oracle-naive/: Cargo.toml
cu_bench/small-oracle/small-oracle-naive/src/: lib.rs
cu_bench/small-oracle/small-oracle-naive/tests/: cu_benchmark.rs
cu_bench/small-oracle/small-oracle-opt/: Cargo.toml
cu_bench/small-oracle/small-oracle-opt/src/: lib.rs
cu_bench/small-oracle/small-oracle-opt/tests/: cu_benchmark.rs
cu_bench/small-oracle/src/: lib.rs
cu_bench/small-oracle/tests/: cu_benchmark.rs
cu_bench/small_oracle/: Cargo.toml
cu_bench/small_oracle/src/: lib.rs
cu_bench/small_oracle/tests/: cu_benchmark.rs
examples/cpi-call/: Cargo.toml
examples/cpi-call/src/: lib.rs
programs/address-lookup-table/: Cargo.toml  README.md
programs/address-lookup-table/src/: lib.rs
programs/address-lookup-table/src/instructions/: close.rs  create.rs  deactivate.rs  extend.rs  freeze.rs  mod.rs
programs/associated-token-account/: Cargo.toml  README.md
programs/associated-token-account/src/instructions/: create.rs  create_idempotent.rs  recover_nested.rs
programs/compute-budget/: Cargo.toml  README.md
programs/compute-budget/src/: lib.rs
programs/compute-budget/src/instructions/: mod.rs  request_heap_frame.rs  set_compute_unit_limit.rs  set_compute_unit_price.rs
programs/feature-gate/: Cargo.toml  README.md
programs/feature-gate/src/: instructions.rs  lib.rs  state.rs
programs/memo/: Cargo.toml
programs/memo/src/instructions/: mod.rs
programs/record/: Cargo.toml  README.md
programs/record/src/: lib.rs  state.rs
programs/record/src/instructions/: close_account.rs  initialize.rs  mod.rs  reallocate.rs  set_authority.rs  write.rs
programs/stake/: Cargo.toml  README.md
programs/stake/src/: lib.rs
programs/stake/src/instructions/: authorize.rs  authorize_checked.rs  deactivate.rs  deactivate_delinquent.rs  delegate_stake.rs  get_minimum_delegation.rs  initialize.rs  initialize_checked.rs  merge.rs  mod.rs  move_lamports.rs  move_stake.rs  set_lockup.rs  set_lockup_checked.rs  split.rs  withdraw.rs
programs/stake/src/state/: authorized.rs  delegation.rs  lockup.rs  meta.rs  mod.rs  stake.rs  stake_authorize.rs  stake_flag.rs  stake_state.rs  stake_state_v2.rs
programs/system/: Cargo.toml
programs/system/src/: callback.rs  invoke_parts.rs  invoker.rs  lib.rs
programs/system/src/instructions/: advance_nonce_account.rs  allocate.rs  allocate_with_seed.rs  assign.rs  assign_with_seed.rs  authorize_nonce_account.rs  create_account.rs  create_account_allow_prefund.rs  create_account_with_seed.rs  initialize_nonce_account.rs  mod.rs  transfer.rs  transfer_with_seed.rs  update_nonce_account.rs  upgrade_nonce_account.rs  withdraw_nonce_account.rs
programs/token/: Cargo.toml  README.md
programs/token-2022/: Cargo.toml  README.md
programs/token-2022/src/: lib.rs
programs/token-2022/src/extension/: consts.rs  mod.rs
programs/token-2022/src/extensions/: mod.rs
programs/token-2022/src/instructions/: amount_to_ui_amount.rs  approve.rs  approve_checked.rs  burn.rs  burn_checked.rs  close_account.rs  create_native_mint.rs  freeze_account.rs  get_account_data_size.rs  initialize_account.rs  initialize_account_2.rs  initialize_account_3.rs  initialize_immutable_owner.rs  initialize_mint.rs  initialize_mint_2.rs  initialize_multisig.rs  initialize_multisig_2.rs  mint_to.rs  mint_to_checked.rs  mod.rs  reallocate.rs  revoke.rs  set_authority.rs  sync_native.rs  thaw_account.rs  transfer.rs  transfer_checked.rs  ui_amount_to_amount.rs  unwrap_lamports.rs  withdraw_excess_lamports.rs
programs/token-2022/src/state/: account.rs  account_state.rs  account_type.rs  metadata.rs  mint.rs  mod.rs  multisig.rs  token.rs
programs/token/src/: error.rs  instruction.rs  instructions.rs  lib.rs
programs/token/src/definitions/: amount_to_ui_amount.rs  approve.rs  approve_checked.rs  batch.rs  burn.rs  burn_checked.rs  close_account.rs  freeze_account.rs  get_account_data_size.rs  initialize_account.rs  initialize_account_2.rs  initialize_account_3.rs  initialize_immutable_owner.rs  initialize_mint.rs  initialize_mint_2.rs  initialize_multisig.rs  initialize_multisig_2.rs  mint_to.rs  mint_to_checked.rs  mod.rs  revoke.rs  set_authority.rs  sync_native.rs  thaw_account.rs  transfer.rs  transfer_checked.rs  ui_amount_to_amount.rs  unwrap_lamports.rs  withdraw_excess_lamports.rs
programs/token/src/extensions/: confidential_mint_burn.rs  confidential_transfer.rs  confidential_transfer_fee.rs  cpi_guard.rs  default_account_state.rs  group.rs  group_member_pointer.rs  group_pointer.rs  immutable_owner.rs  metadata.rs  (+13 more)
programs/transfer-hook-interface/: Cargo.toml  README.md
programs/transfer-hook-interface/src/: instruction.rs  lib.rs  state.rs
programs/zk-elgamal-proof/: Cargo.toml  README.md
programs/zk-elgamal-proof/src/: lib.rs
sdk/: Cargo.toml
sdk/err/: Cargo.toml
sdk/err/src/: lib.rs
sdk/log/: README.md
sdk/log/crate/: Cargo.toml
sdk/log/macro/: Cargo.toml
sdk/pinocchio/: Cargo.toml  README.md
sdk/pinocchio/src/: account_info.rs  cpi.rs  instruction.rs  lib.rs  log.rs  memory.rs  program.rs  program_error.rs  pubkey.rs  sanitize_error.rs  syscalls.rs  syscalls_stubs.rs
sdk/pubkey/: Cargo.toml  README.md
sdk/pubkey/src/: lib.rs
sdk/src/: lib.rs
sdk/src/entrypoint/: custom.rs  inline.rs  lazy.rs  mod.rs  test_utils.rs
sdk/src/syscall_helpers/: secp256k1.rs
sdk/src/sysvars/: clock.rs  epoch_rewards.rs  epoch_schedule.rs  fees.rs  instructions.rs  mod.rs  rent.rs
(+214 files in other folders)
