[workspace]
resolver = "2"
members = [
    "programs/associated-token-account",
    "programs/system",
    "programs/token",
    "sdk/log/crate",
    "sdk/log/macro",
    "sdk/pinocchio",
    "sdk/pubkey",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anza-xyz/pinocchio"

[workspace.dependencies]
five8_const = "0.1.4"
pinocchio = { path = "sdk/pinocchio", version = "0.8" }
pinocchio-pubkey = { path = "sdk/pubkey", version = "0.2" }
pinocchio-log-macro = { version = "0.4", path = "sdk/log/macro" }
quote = "1.0"
regex = "1"
solana-account-view = { version = "0.0.0", git = "https://github.com/febo/solana-sdk.git", branch = "instruction-view" }
solana-address = { version = "0.0.0", git = "https://github.com/febo/solana-sdk.git", branch = "instruction-view" }
solana-instruction-view = { version = "0.0.0", git = "https://github.com/febo/solana-sdk.git", branch = "instruction-view" }
solana-program-error = { version = "2.2.1", git = "https://github.com/kevinheavey/solana-sdk.git", branch = "program-error-pinocchio-compat" }
syn = "1.0"

[workspace.metadata.cli]
solana = "2.2.0"

[workspace.metadata.toolchains]
build = "1.84.1"
format = "nightly-2024-11-22"
lint = "nightly-2024-11-22"
test = "1.84.1"
