[workspace]
resolver = "2"
members = [
    "programs/associated-token-account",
    "programs/memo",
    "programs/system",
    "programs/token",
    "programs/token-2022",
    "sdk",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anza-xyz/pinocchio"
rust-version = "1.84"

[workspace.dependencies]
five8_const = "0.1.4"
pinocchio = { version = "0.9", path = "sdk" }
solana-account-view = { version = "0.0.0", git = "https://github.com/febo/solana-sdk.git", branch = "solana-instruction-view" }
solana-address = { version = "1.0", git = "https://github.com/febo/solana-sdk.git", branch = "solana-instruction-view" }
solana-define-syscall = { version = "3.0.0", git = "https://github.com/febo/solana-sdk.git", branch = "solana-instruction-view" }
solana-instruction-view = { version = "0.0.0", git = "https://github.com/febo/solana-sdk.git", branch = "solana-instruction-view" }
solana-program-error = { version = "3.0.0", git = "https://github.com/febo/solana-sdk.git", branch = "solana-instruction-view" }

[workspace.metadata.cli]
solana = "2.3.0"

[workspace.metadata.toolchains]
build = "1.84.1"
format = "nightly-2025-02-16"
lint = "nightly-2025-02-16"
test = "1.84.1"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.metadata.spellcheck]
config = "scripts/setup/spellcheck.toml"
