[workspace]
resolver = "2"
members = [
    "small-oracle/shared-types",
    "small-oracle/shared-bench",
    "small-oracle/small-oracle-opt",
    "small-oracle/small-oracle-naive",
    "small-oracle/small-oracle-manual",
]


[workspace.dependencies]
bytemuck = { version = "1", default-features = false, features = ["derive"] }
pinocchio = { path = "../sdk", default-features = false }
solana-address = { version = "2.0", features = ["bytemuck", "copy"] }
