[package]
name = "pinocchio"
description = "Create Solana programs with no dependencies attached"
version = "0.9.1"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[lib]
crate-type = ["rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[features]
alloc = []
copy = ["solana-account-view/copy", "solana-address/copy"]
cpi = ["dep:solana-instruction-view"]
default = ["alloc"]

[dependencies]
solana-account-view = { workspace = true }
solana-address = { workspace = true, features = ["syscalls"] }
solana-instruction-view = { workspace = true, features = ["cpi"], optional = true }
solana-program-error = { workspace = true }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = { workspace = true }

[target.'cfg(target_arch = "bpf")'.dependencies]
solana-define-syscall = { workspace = true }

[dev-dependencies]
five8_const = { workspace = true }
