[package]
name = "pinocchio-small-oracle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1", default-features = false, features = ["derive"] }
pinocchio = { path = "../../sdk", default-features = false }
solana-address = { version = "2.0", features = ["bytemuck"] }

[dev-dependencies]
mollusk-svm = "0.0.12"
solana-sdk = "2.1"
