[package]
name = "pinocchio-associated-token-account"
description = "Pinocchio helpers to invoke Associated Token Account program instructions"
version = "0.1.1"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
solana-account-view = { workspace = true }
solana-instruction-view = { workspace = true, features = ["cpi"] }
solana-program-error = { workspace = true }
pinocchio-pubkey = { workspace = true }
