[package]
name = "pinocchio-associated-token-account"
version = "0.2.0"
edition = { workspace = true }
rust-version = { workspace = true }
description = "Pinocchio helpers to invoke Associated Token Account program instructions"
readme = "./README.md"
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
