[package]
name = "pinocchio-memo"
version = "0.2.0"
edition = { workspace = true }
rust-version = { workspace = true }
description = "Pinocchio helpers to invoke Memo program instructions"
readme = "./README.md"
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
