[package]
name = "pinocchio-record"
description = "Pinocchio helpers to invoke Record program instructions"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true, features = ["cpi"] }
solana-address = { workspace = true, features = ["decode"] }
