[package]
name = "pinocchio-system"
description = "Pinocchio helpers to invoke System program instructions"
version = "0.2.2"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
solana-account-view = { workspace = true }
solana-address = { workspace = true }
solana-instruction-view = { workspace = true, features = ["cpi"] }
solana-program-error = { workspace = true }
pinocchio-pubkey = { workspace = true }
