[package]
name = "pinocchio-system"
version = "0.3.0"
edition = { workspace = true }
rust-version = { workspace = true }
description = "Pinocchio helpers to invoke System program instructions"
readme = "./README.md"
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
