[package]
name = "pinocchio-token-2022"
version = "0.1.0"
edition = { workspace = true }
description = "Pinocchio helpers to invoke Token-2022 program instructions"
readme = "./README.md"
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
