[package]
name = "pinocchio-token"
description = "Pinocchio helpers to invoke Token program instructions"
version = "0.3.0"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
solana-account-view = { workspace = true }
solana-address = { workspace = true }
solana-instruction-view = { workspace = true, features = ["cpi"] }
solana-program-error = { workspace = true }
pinocchio-pubkey = { workspace = true }
