[package]
name = "pinocchio-token"
version = "0.4.0"
edition = { workspace = true }
rust-version = { workspace = true }
description = "Pinocchio helpers to invoke Token program instructions"
readme = "./README.md"
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
