[package]
name = "pinocchio"
description = "Create Solana programs with no dependencies attached"
version = "0.9.2"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_feature, values("static-syscalls"))',
] }

[features]
std = []
solana-address1 = ["dep:solana-address"]
solana-pubkey2 = ["dep:solana-pubkey"]

[dependencies]
solana-address = { workspace = true, optional = true }
solana-pubkey = { workspace = true, optional = true }

[dev-dependencies]
five8_const = { workspace = true }
