[package]
name = "pinocchio"
description = "Create Solana programs with no dependencies attached"
version = "0.9.2"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(target_feature, values("static-syscalls"))',
] }

[features]
copy = ["solana-account-view/copy", "solana-address/copy"]
cpi = ["dep:solana-instruction-view"]
alloc = []

[dependencies]
solana-account-view = { workspace = true }
solana-address = { workspace = true, features = ["syscalls"] }
solana-instruction-view = { workspace = true, features = ["cpi"], optional = true }
solana-program-error = { workspace = true }

[target.'cfg(any(target_os = "solana", target_arch = "bpf"))'.dependencies]
solana-define-syscall = { workspace = true }

[dev-dependencies]
pinocchio = { path = ".", features = ["alloc"] }
five8_const = { workspace = true }
