[package]
name = "pinocchio"
version = "0.9.2"
edition = { workspace = true }
rust-version = { workspace = true }
description = "Create Solana programs with no dependencies attached"
readme = "./README.md"
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib"]

[dev-dependencies]
five8_const = { workspace = true }

[features]
std = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(target_feature, values("static-syscalls"))',
] }
