[package]
name = "pinocchio-log"
version = "0.5.1"
edition = { workspace = true }
rust-version = { workspace = true }
description = "Lightweight log utility for Solana programs"
readme = "./README.md"
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio-log-macro = { workspace = true, optional = true }

[features]
default = ["macro"]
macro = ["dep:pinocchio-log-macro"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(target_feature, values("static-syscalls"))',
] }
