[package]
name = "pinocchio-log-macro"
version = "0.5.0"
edition = { workspace = true }
rust-version = { workspace = true }
description = "Macro for pinocchio log utility"
readme = "./README.md"
repository = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
regex = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full"] }
